--- a/css/sPay.css
+++ b/css/sPay.css
@@ -1,8 +1,7 @@
 section { min-height: calc(100vh - 240px); margin-top: 150px; margin-bottom: 120px; padding: 0 15%; } 
 .payWrap { display: flex; justify-content: space-between; } 
 .buyerInfo { width: 700px; margin-top: 35px; } 
-.buyerInfo h1 { font-family: pSemi; font-size: 24px; } 
-.bIline { width: 100%; height: 30px; border-bottom: solid 1px var(--color-line); margin-bottom: 30px; } 
+.buyerInfo h1 { padding-bottom: 30px; margin-bottom: 30px; font-family: pSemi; font-size: 24px; border-bottom: 1px solid var(--color-line); } 
 .buyerInfo h2 { font-family: pSemi; font-size: 20px; color: #282828; margin-bottom: 40px; } 
 .buyerInfoList { width: 80%; } 
 
@@ -34,6 +33,7 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance: none; marg
 .itemInfoInner { width: 85%; margin: 30px auto; } 
 .itemInfoInner h1 { font-family: pSemi; font-size: 24px; margin-bottom: 15px; } 
 .ment { font-family: pLight; font-size: 16px; color: #6C6C6C; } 
+
 /* =========== 상품 이미지, 텍스트============== */
 .itemThumb { margin-top: 20px; margin-bottom: 35px; display: flex; } 
 .imgWrap { width: 92px; height: 92px; } 
@@ -41,6 +41,7 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance: none; marg
 .itemThtext p { color: #444; font-size: 14px; font-family: pRegular;}
 .itemThtext .itemTitle { line-height: 150%; margin-bottom: 10px; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; } 
 .imgWrap img { width: 100%; height: 100%; object-fit: cover; border-radius: 5px; } 
+
 /* ======= 선택한 상품 가격과 갯수=========== */
 .selP { font-family: pSemi; font-size: 17px; color: #525252; } 
 .selectItem { background-color: #f8f8f8; margin-top: 20px; margin-bottom: 20px; padding: 20px; border-radius: 10px; } 
@@ -60,13 +61,14 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance: none; marg
 .payLine { height: 30px; border-bottom: solid 1px var(--color-line); margin-bottom: 30px; } 
 
 /* ============= 결제 금액 확인 =========== */
+.priceInfo { padding-bottom: 30px; margin-bottom: 30px; border-bottom: 1px solid var(--color-line); }
 .priceInfo h3 { font-family: pSemi; font-size: 17px; color: #525252; } 
 .pspt { margin-top: 20px; } 
 .psptIn { width: 100%; height: 22px; display: flex; -webkit-box-align: center; align-items: center; -webkit-box-pack: justify; justify-content: space-between;margin-top: 15px; font-size: 15px; color: #525252; } 
 .tot { font-family: pBold; font-size: 20px; color: var(--color-main); margin-top: 20px; } 
 .totment { font-size: 17px; } 
 /* ========== 결제 방법============ */
-.hP { font-family: pSemi; font-size: 17px; color: #525252; } 
+.hP { font-family: pSemi; font-size: 17px; color: #525252;} 
 .howPay { display: flex; justify-content: space-between; } 
 .howPay button { padding: 25px 10px; margin-bottom: 20px; width: 48%; margin-top: 25px; border: solid 1px var(--color-line); border-radius: 5px; font-family: pMedium; font-size: 17px;background-color: white; cursor: pointer; } 
 .howPay button:hover { border: solid 1px var(--color-main); transition: all .3s; } 
@@ -90,6 +92,65 @@ label[for='langUs']::before { content: 'Eng'; }
 label[for='langKor']:hover::before, label[for='langUs']:hover::before { opacity: 1; } 
 
 .lBtn:checked + label::before { opacity: 1; }
+
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px) { 
+    section { padding: 0 5.5%; margin: 70px 0 60px 0; } 
+    .payWrap { flex-direction: column; }
+    .buyerInfo { margin: 20px 0 30px 0; width: auto; }
+    .buyerInfo h1 { padding-bottom: 20px; margin-bottom: 20px; font-size: 16px; font-family: pBold; }
+    .buyerInfo h2 { margin-bottom: 25px; font-size: 15px; }
+
+    .nameGen { margin-bottom: 20px;}
+    .nameGen p { font-size: 13px; width: 100%;  }
+    .nameGen span input { padding: 7px; }
+    .nameGen select { padding: 7px; width: 100%; }
+
+    .birth { margin-bottom: 20px; }
+    .birth p { font-size: 13px; }
+    input[type=date], input[type=number], .email input {padding: 7px;  width: 100%; font-family: pRegular; }
+    .phoneNum { margin-bottom: 20px; }
+    .phoneNum p { font-size: 13px; }
+    .email p { font-size: 13px; }
+
+    .itemInfo { width: 100%; }
+    .itemInfoInner { width: 85%; margin: 20px auto;}
+    .itemInfoInner h1 { font-size: 18px; margin-bottom: 5px; font-family: pBold; }
+    .itemInfoInner .lBtn + label { margin-right: 5px; width: 28px; height: 28px; }
+    label[for='langKor']::before, label[for='langUs']::before { top: 9px; left: 4px; font-size: 12px; text-shadow: 0 0 6px #000; }
+    .itemInfoInner .ment { font-size: 12px; }
+
+    .itemThumb { margin: 15px 0 25px 0;}
+    .itemThtext .itemTitle { font-size: 15px; line-height: 130%; }
+    .itemThtext p { font-size: 12px; }
+    .selP, .point p { font-size: 13px; }
+    .selectItem { padding: 15px; margin: 7px 0 20px 0; }
+    .selectItem span { font-size: 14px; }
+    .datePrice { padding-top: 5px;}
+    .datePrice p { font-size: 12px; }
+    .datePrice h3 { font-size: 18px; }
+
+    .point span { margin-left: 10px; font-size: 12px; color: #888;}
+    .usePoint input { padding: 7px 12px; }
+    .usePoint button { padding: 0 15px; font-size: 13px; background: #fff; border-color: var(--color-main);}
+
+    .pspt p { font-size: 13px; }
+    .pspt .psptIn { margin-top: 8px;}
+    .pspt .psptIn.tot p { font-size: 18px; }
+
+    .priceInfo { padding-bottom: 20px; margin-bottom: 20px; }
+    .howPay button { padding: 15px; margin: 15px 0; font-size: 13px;}
+
+    .itemBtn { height: 50px; margin-top: 0; font-size: 15px; font-family: pSemi;}
+    
+     }
+     
+     @media screen and (min-width: 1024px) { body { } 
+     }
+     
+     @media screen and (min-width: 1440px) { body { } 
+     }
 
 
 
