--- a/css/sDetail.css
+++ b/css/sDetail.css
@@ -139,7 +139,7 @@ border: none; background: var(--color-main); }
 @media screen and (max-width: 768px) {
     section { margin: 80px 0 30px 0; padding: 0 5.5%; }
     .banner { height: 200px; border-radius: 10px;}
-    .postContent { flex-direction: column; }
+    .postContent { flex-direction: column; margin-top: 15px; }
 
     .pLeft { width: auto; }
     .pLeft strong { font-size: 15px; }
