--- a/css/slick_theme.css
+++ b/css/slick_theme.css
@@ -226,7 +226,9 @@
         height: 22px;
         width: 22px;
         opacity: 1;
-        background-color: #ffffffbb;
+        background-color: transparent;
+        content: url(../source/arr_w_l.png);
+        filter: drop-shadow(1px 1px 2px #000000c2);
     }
 
     .slick-next:before {
@@ -235,7 +237,13 @@
         height: 22px;
         width: 22px;
         opacity: 1;
-        background-color: #ffffffbb;
+        background-color: transparent;
+        content: url(../source/arr_w_r.png);
+    }
+
+    .slick-prev:hover:before,
+    .slick-next:hover:before {
+        background-color: transparent;
     }
 
     .slick-dots li button:before {
