--- a/css/cGroup.css
+++ b/css/cGroup.css
@@ -72,7 +72,7 @@ to { opacity: 1; transform: none; }
  .schFrm { width: 70%; margin-right: 0; padding: 5px 6px; border-radius: 8px;} 
  .schFrm input { width: 80%; font-size: 13px; } 
  .schFrm button { width: 22px; height: 22px; } 
- .sortBtn { padding: 5px 8px; font-size: 12px;}
+ .sortBtn { padding: 5px 8px; font-size: 12px; color: #000; }
 
  .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
  .goDetail { width: 100%; } 
