--- a/css/cSchedule.css
+++ b/css/cSchedule.css
@@ -76,7 +76,7 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
  .schFrm { width: 70%; margin-right: 0; padding: 5px 6px; border-radius: 8px;} 
  .schFrm input { width: 80%; font-size: 13px; } 
  .schFrm button { width: 22px; height: 22px; } 
- .sortBtn { padding: 5px 8px; font-size: 12px;}
+ .sortBtn { padding: 5px 8px; font-size: 12px; color: #000; }
 
  .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
  .goDetail { width: 100%; } 
