--- a/css/cSchedule.css
+++ b/css/cSchedule.css
@@ -86,6 +86,9 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
  .schTopInfo .subTxt { font-size: 13px; }  
  .schOne .post { width: 100%; height: 170px; } 
  .schOne .schMap { width: 100%; height: 200px; } 
+ .locList ul { font-size: 13px; }
+ .locList ul li { padding: 12px 0 12px 18px; }
+ .locList ul li::before { top: 9px; width: 18px; height: 18px; }
  
  .pagination { display: none; }
 
