--- a/css/main.css
+++ b/css/main.css
@@ -172,10 +172,11 @@ to { opacity: 1; transform: none; }
 
  .postImg { width: 100%; } 
  .postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
- .postBottom { width: 90%; height: 70px; } 
+ .postBottom { width: 90%; height: 60px; } 
 
- .postBottom .infoText { font-size: 16px; } 
- .locPay p { font-size: 13px; } 
+ .postBottom .infoText { font-size: 15px; } 
+ .locPay p { margin-top: 5px; font-size: 13px; } 
+ .locPay span { padding-top: 0; font-size: 16px;}
 
 
  /* ------------------- 동행 ------------------- */
@@ -201,7 +202,6 @@ to { opacity: 1; transform: none; }
  .hiddenBox { height: 45px; padding: 20px 23px; font-size: 13px; } 
  .hiddenBox .viewCnt::before { top: -2px; left: -25px; } 
  .hiddenBox .chatCnt::before { top: -2px; left: -25px; } 
-
  
  /* ------------------- 일정 ------------------- */
 
@@ -213,8 +213,9 @@ to { opacity: 1; transform: none; }
  .dayAll { height: 100%;}
  .dayAll span.day { padding: 6px 11px; margin: 0 5px 5px 0; font-size: 12px; }
 
- .locList ul { font-size: 14px; }
- .locList ul li { padding: 15px 0 15px 22px; }
+ .locList ul { font-size: 13px; }
+ .locList ul li { padding: 12px 0 12px 18px; }
+ .locList ul li::before { top: 9px; width: 18px; height: 18px; }
 
  #scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 45px; height: 45px; bottom: 83px; right: 25px; border-radius: 50%; text-align: center; font-size: 12px; position: fixed; z-index: 100; cursor: pointer; } 
  #scrollTop::before { content: "\2303"; position: absolute; top: 8px; left: 15px; color: #171717; font-family: pLight; font-size: 18px; } 
