--- a/css/sList.css
+++ b/css/sList.css
@@ -47,7 +47,7 @@ section { min-height: calc(100vh - 240px); margin-top: 170px; margin-bottom: 120
  .strFrm { width: 70%; margin-right: 0; padding: 5px 6px; border-radius: 8px;} 
  .strFrm input { width: 80%; font-size: 13px; }
  .strFrm button { width: 22px; height: 22px; } 
- .sortBtn + label { font-size: 12px;}
+ .sortBtn + label { font-size: 12px; color: #000; }
 
  .itemAll { margin: 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
  .itemOne { width: 100%; height: 100%; margin: 15px 0; } 
@@ -57,8 +57,9 @@ section { min-height: calc(100vh - 240px); margin-top: 170px; margin-bottom: 120
  .postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
  .postBottom { width: 90%; height: 70px; } 
  
- .postBottom .infoText { font-size: 16px; } 
- .locPay p { font-size: 13px; } 
+ .postBottom .infoText { font-size: 15px; } 
+ .locPay p { margin-top: 5px; font-size: 13px; } 
+ .locPay span { padding-top: 0; font-size: 16px;}
 
  #soldOut .soldOutTxt { font-size: 22px; }
 
