--- a/css/cGroup.css
+++ b/css/cGroup.css
@@ -78,8 +78,13 @@ to { opacity: 1; transform: none; }
  .goDetail { width: 100%; } 
  .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
  
- .schTopInfo { width: 82%; height: 44px; padding: 5px 15px; border-radius: 13px; font-size: 12px; } 
- .schTopInfo .subTxt { font-size: 13px; }  
+ .schTopInfo { width: 82%; height: 40px; padding: 5px 15px; border-radius: 13px; font-size: 12px; } 
+ .schTopInfo .subTxt { font-size: 11px; } 
+ .schOne .post { width: 100%; height: 170px; } 
+ 
+ .postLoc { top: 27%; padding: 5px 8px 5px 20px; font-size: 11px; border-radius: 6px; }
+ .postLoc::before { width: 13px; height: 13px; top: 23%; left: 7%; }
+
  .schOne .post { width: 100%; height: 180px; } 
  .goDetail .postImg { width: 100%; } 
  
@@ -87,7 +92,6 @@ to { opacity: 1; transform: none; }
  .goDetail .postBottom h3 { width: 98%; font-size: 16px; } 
  .goDetail .postBottom p { width: 98%; margin-top: 7px; font-size: 13px; } 
  
- .postLoc { top: 28%; padding: 7px 10px 7px 28px; font-size: 12px; border-radius: 8px; } 
  .hiddenBox { height: 45px; padding: 20px 23px; font-size: 13px; } 
  .hiddenBox .viewCnt::before { top: -2px; left: -25px; } 
  .hiddenBox .chatCnt::before { top: -2px; left: -25px; } 
