--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -103,17 +103,16 @@ footer p { margin-top: 10px; color: #222; }
  .gnbBottom img { width: 17px; margin-right: 5px; margin-bottom: 3px} 
  .together img { width: 21px; margin-bottom: 2px; } 
 
- footer { padding: 10px 6%; height: 170px; font-size: 12px;}
+ footer { padding: 5px 6% 20px 6%; height: 140px; font-size: 12px;}
  footer a { color: #777;}
- footer p { margin-top: 7px; font-size: 11px; font-family: pLight; color: #777;}
- footer img { width: 130px; margin: 0 0 0 -7px; }
+ footer p { margin-top: 5px; font-size: 11px; font-family: pLight; color: #777;}
+ footer img { width: 110px; margin: 0 0 0 -7px; }
 
  
  }
 
 @media screen and (min-width: 1024px) { body { } 
 
- .desktop { display: block; } 
  header { } 
 
  footer { } 
