--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ to { opacity: 1; transform: none; }
 /* --------------- responsible --------------- */
 
 @media screen and (max-width: 768px){
-.mainBanner { height: 95vh; background: url(../source/mainBn_mb.png) center center no-repeat; background-size: cover; }
+.mainBanner { height: 92vh; background: url(../source/mainBn_mb.png) center center no-repeat; background-size: cover; }
  .mainBnLogo { width: 250px; filter: drop-shadow(2px 2px 3px #00000052); } 
  .mainCon p { width: 320px; font-size: 14px; } 
 
@@ -186,12 +186,12 @@ to { opacity: 1; transform: none; }
  .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
  .goDetail:nth-child(2) ~ .goDetail { display: none; } 
  
- .schTopInfo { width: 82%; height: 44px; padding: 5px 15px; border-radius: 13px; font-size: 12px; } 
- .schTopInfo .subTxt { font-size: 13px; } 
+ .schTopInfo { width: 82%; height: 40px; padding: 5px 15px; border-radius: 13px; font-size: 12px; } 
+ .schTopInfo .subTxt { font-size: 11px; } 
  .schOne .post { width: 100%; height: 170px; } 
  
- .postLoc { top: 27%; padding: 7px 10px 7px 22px; font-size: 11px; border-radius: 8px; }
- .postLoc::before { top: 20%; left: 6%; }
+ .postLoc { top: 27%; padding: 5px 8px 5px 20px; font-size: 11px; border-radius: 6px; }
+ .postLoc::before { width: 13px; height: 13px; top: 23%; left: 7%; }
 
  .goDetail .postImg { width: 100%; } 
  
