--- a/css/mypage.css
+++ b/css/mypage.css
@@ -260,8 +260,10 @@ to { opacity: 1; transform: none; }
 
 /* --------------------------- responsible ---------------------------------------- */
 
-@media screen and (max-width: 768px) { section { margin: 80px 0 30px 0; padding: 0 5.5%; } 
+@media screen and (max-width: 768px) { 
+ section { margin: 80px 0 30px 0; padding: 0 5.5%; } 
  .myInner { flex-direction: column; } 
+ .mlInner { margin: 15px auto; } 
  .mypageGnb { width: 100%; height: auto; padding: 0; } 
  .mypageGnb ul { display: flex; flex-wrap: wrap; margin-top: 10px; } 
  .mypageGnb ul li { width: 45%; margin: 5px; border-radius: 7px; } 
@@ -271,7 +273,7 @@ to { opacity: 1; transform: none; }
  .mypageGnb ul .menuin img { margin-left: 8px; width: 25px; } 
  .menuin .mypimg { width: 50px; } 
  .mypageGnb ul .menuin span { margin-left: 10px; font-size: 14px; } 
- .nameflag span { font-size: 15px;}
+ .nameflag span { font-size: 15px; } 
  
  /* --------------------- mymain ------------------------ */
  .mypageCon { margin-top: 40px; width: auto; } 
@@ -285,10 +287,10 @@ to { opacity: 1; transform: none; }
  .gitwo { margin-top: 30px; } 
  .mmnow { margin: 0; width: 100%; } 
  .mmnow h1 { font-size: 15px; } 
- .mmnow .mmnowbox { justify-content: space-between; padding: 10px 28px; margin: 10px 0 20px 0; font-size: 13px; }
- .mmnowMycon { justify-content: center;}
+ .mmnow .mmnowbox { justify-content: space-between; padding: 10px 28px; margin: 10px 0 20px 0; font-size: 13px; } 
+ .mmnowMycon { justify-content: center; } 
  .mmnowMycon span { font-size: 15px; } 
- .mmnowMycon p { margin-top: 5px; color: #0000009f;}
+ .mmnowMycon p { margin-top: 5px; color: #0000009f; } 
  .mmnow .mmnowbox .mmLine { margin: 0; height: 45px; border-right: 1px solid #a7a7a7; } 
  
  .mmyourchal { width: auto; margin-top: 10px; } 
@@ -306,11 +308,11 @@ to { opacity: 1; transform: none; }
  
  .mannerLevel { flex-wrap: wrap; margin: 35px 0; } 
  .mannerLevel .mlb { height: 98px; width: 17%; margin-bottom: 7px; } 
- .lvimg p { color: #000000c0; font-family: pRegular; font-size: 11px; }
- .lvhow img { width: 15px; }
+ .lvimg p { color: #000000c0; font-family: pRegular; font-size: 11px; } 
+ .lvhow img { width: 15px; } 
  .mlbInner { display: flex; justify-content: space-between; flex-direction: column; height: 80%; margin: 5px 0; font-size: 12px; } 
- .lastment { margin: 20px 0; border-radius: 8px;}
- .lastment p { padding: 15px 0; font-size: 13px; }
+ .lastment { margin: 20px 0; border-radius: 8px; } 
+ .lastment p { padding: 15px 0; font-size: 13px; } 
 
  /* -------------------- mysetting ---------------------- */
  .proset { width: 100%; } 
@@ -362,7 +364,7 @@ to { opacity: 1; transform: none; }
 
 .itemAll { margin: 10px 0 0 0; padding-bottom: 0; display: flex; flex-direction: column; } 
 .itemOne { display: none; width: 92%; height: 100%; margin: 15px auto; } 
-.itemOne.active { display: block; }
+.itemOne.active { display: block; } 
 .itemOne .post { height: 140px; } 
 
 .postImg { width: 100%; } 
@@ -371,55 +373,55 @@ to { opacity: 1; transform: none; }
  
  .postBottom .infoText { font-size: 15px; } 
  .locPay p { margin-top: 5px; font-size: 13px; } 
- .locPay span { padding-top: 0; font-size: 16px;}
- .morePost { display: block; margin: 20px auto 0 auto; width: 70px; padding: 6px 0; color: #000; background: #e0e0e0c5; border-radius: 5px; font-size: 13px; font-family: pMedium; cursor: pointer; }
+ .locPay span { padding-top: 0; font-size: 16px; } 
+ .morePost { display: block; margin: 20px auto 0 auto; width: 70px; padding: 6px 0; color: #000; background: #e0e0e0c5; border-radius: 5px; font-size: 13px; font-family: pMedium; cursor: pointer; } 
  
  /* -------------------- myreview ------------------------- */
-.reviewInner { display: none;}
-.reviewInner.active { display: block; }
- .rvAll .buyitem { width: 90%; padding: 5px 15px;}
- .buyitem h1 { font-size: 15px; }
- .buyitem p { font-size: 13px; }
- .redatedel span { font-size: 12px; color: #999; }
- .redatedel button { font-size: 12px; }
+.reviewInner { display: none; } 
+.reviewInner.active { display: block; } 
+ .rvAll .buyitem { width: 90%; padding: 5px 15px; } 
+ .buyitem h1 { font-size: 15px; } 
+ .buyitem p { font-size: 13px; } 
+ .redatedel span { font-size: 12px; color: #999; } 
+ .redatedel button { font-size: 12px; } 
 
  /* --------------------- mygroup ------------------------- */
  .groAll, .schAll { width: 100%; margin: 10px 0 0 0; display: flex; flex-direction: column; } 
  .groAll .goDetail { display: none; width: 93%; margin: 10px auto 0 auto; } 
- .groAll .goDetail.active { display: block; }
+ .groAll .goDetail.active { display: block; } 
 
- .schOne { width: 96%; height: 100%; margin: 10px auto; border-radius: 12px; box-shadow: 1px 1px 7px #8585856b; } 
- .schTopInfo { left: 3%; padding: 5px 15px; font-size: 12px; } 
- .schTopInfo .schNicK { font-size: 15px;}
- .schUser div span:last-child { font-size: 13px; }
- .schDays p:first-child { font-family: pLight; }
- .schDays p:first-child, .schTopInfo .subTxt { font-size: 12px; }
+ .schOne { width: 100%; height: 100%; margin: 10px auto; border-radius: 12px; box-shadow: 1px 1px 7px #8585856b; } 
+ .schTopInfo { top: 7%; left: 0; padding: 0 15px; font-size: 12px; } 
+ .schTopInfo .schNicK { font-size: 15px; } 
+ .schUser div span:last-child { font-size: 13px; } 
+ .schDays p:first-child { font-family: pLight; } 
+ .schDays p:first-child, .schTopInfo .subTxt { font-size: 12px; } 
  .schOne .post { width: 100%; height: 150px; } 
  
- .postLoc { top: 27%; padding: 7px 10px 7px 22px; font-size: 11px; border-radius: 8px; }
- .postLoc::before { top: 20%; left: 6%; }
+ .postLoc { top: 27%; padding: 7px 10px 7px 22px; font-size: 11px; border-radius: 8px; } 
+ .postLoc::before { top: 20%; left: 6%; } 
 
  .goDetail .postImg { width: 100%; } 
- .goDetail .postBottom { width: 90%; height: 100%; padding: 5px 0 15px 0; } 
+ .goDetail .postBottom { width: 85%; height: 100%; padding: 15px 0 15px 20px; margin: 0;} 
  .goDetail .postBottom h3 { width: 98%; font-size: 14px; } 
 
- .hiddenBox { height: 45px; padding: 20px 23px; font-size: 13px; } 
+ .hiddenBox { height: auto; bottom: 10px; padding: 0 15px; color: #fff; background: transparent; font-size: 12px; font-family: pLight; opacity: 1; z-index: 10; } 
+ .schOne:hover .hiddenBox { opacity: 1; animation: none; z-index: 10; } 
  .hiddenBox .viewCnt::before { top: -2px; left: -25px; } 
  .hiddenBox .chatCnt::before { top: -2px; left: -25px; } 
 
  /* --------------------- mycal ------------------------- */
  .schAll .schOne { display: none; width: 93%; margin: 15px auto; } 
- .schAll .schOne.active { display: block; }
- .schInfo { padding: 15px 20px; border-radius: 8px 8px 0 0;} 
- .schInfo .schUser { margin-bottom: 5px;}
- .schInfo .schUser img { width: 40px; }
- .schInfo .schNicK { margin-left: 0; font-size: 14px; }
+ .schAll .schOne.active { display: block; } 
+ .schInfo { padding: 15px 20px; border-radius: 8px 8px 0 0; } 
+ .schInfo .schUser { margin-bottom: 5px; } 
+ .schInfo .schUser img { width: 40px; } 
+ .schInfo .schNicK { margin-left: 0; font-size: 14px; } 
  
- .schDays .schDate { font-size: 13px;}
- .schDays .days { }
- .schBottom { height: 45px; font-size: 13px; border-radius: 0 0 8px 8px; }
- .schBottom .locIco { width: 20px; height: 20px; }
-
+ .schDays .schDate { font-size: 13px; } 
+ .schDays .days { } 
+ .schBottom { height: 45px; font-size: 13px; border-radius: 0 0 8px 8px; } 
+ .schBottom .locIco { width: 20px; height: 20px; } 
 }
  
  @media screen and (min-width: 1024px) { body { background-color: aqua; } 
