--- a/css/cGroup.css
+++ b/css/cGroup.css
@@ -5,8 +5,10 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
 .schFrm { display: flex; justify-content: space-around; align-items: center; margin-right: 25px; width: 250px; padding: 10px; background-color: #eee; border-radius: 10px; } 
 .schFrm input { font-size: 15px; font-family: pMedium; background: transparent; } 
 .schFrm button { width: 25px; height: 25px; background: url(../source/srhIco.png) center center; background-size: cover; cursor: pointer; } 
-.sortBtn { padding: 6px 10px; border-radius: 6px; border: 1px solid #ccc; font-size: 14px; font-family: pRegular; background: #f1f1f1; cursor: pointer; transition: all .2s ease; } 
-
+.sortBtn { display: none; } 
+ .sortBtn + label { padding: 6px 8px; margin-right: 15px; border-radius: 6px; border: 1px solid #ccc; font-size: 14px; font-family: pRegular; background: #f1f1f1; cursor: pointer; } 
+ .sortBtn:checked + label { color:#fff; background: var(--color-main); border-color: var(--color-main); } 
+ 
 .postBtn { padding: 9px 13px; background: #55ed50aa; border-radius: 6px; font-size: 15px; transition: all .2s; } 
 .postBtn:hover { background: var(--color-sub); } 
 
@@ -72,7 +74,7 @@ to { opacity: 1; transform: none; }
  .schFrm { width: 70%; margin-right: 0; padding: 5px 6px; border-radius: 8px;} 
  .schFrm input { width: 80%; font-size: 13px; } 
  .schFrm button { width: 22px; height: 22px; } 
- .sortBtn { padding: 5px 8px; font-size: 12px; color: #000; }
+ .sortBtn + label { margin-right: 0; font-size: 12px; color: #000; } 
 
  .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
  .goDetail { width: 100%; } 
