--- a/css/cSchedule.css
+++ b/css/cSchedule.css
@@ -5,8 +5,9 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
 .schFrm { display: flex; justify-content: space-around; align-items: center; margin-right: 25px; width: 250px; padding: 10px; background-color: #eee; border-radius: 10px; } 
 .schFrm input { font-size: 15px; font-family: pMedium; background: transparent; } 
 .schFrm button { width: 25px; height: 25px; background: url(../source/srhIco.png) center center; background-size: cover; cursor: pointer; } 
-.sortBtn { padding: 6px 10px; border-radius: 6px; border: 1px solid #ccc; font-size: 14px; font-family: pRegular; background: #f1f1f1; cursor: pointer; transition: all .2s ease; } 
-
+.sortBtn { display: none; } 
+ .sortBtn + label { padding: 6px 8px; margin-right: 15px; border-radius: 6px; border: 1px solid #ccc; font-size: 14px; font-family: pRegular; background: #f1f1f1; cursor: pointer; } 
+ .sortBtn:checked + label { color:#fff; background: var(--color-main); border-color: var(--color-main); } 
 .postBtn { padding: 9px 13px; background: #55ed50aa; border-radius: 6px; font-size: 15px; transition: all .2s; } 
 .postBtn:hover { background: var(--color-sub); } 
 
@@ -68,33 +69,32 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
 
 /* --------------- responsible --------------- */
 
-@media screen and (max-width: 768px) {
- section { margin-top: 130px; } 
+@media screen and (max-width: 768px) { section { margin-top: 130px; } 
 
- .frmLine { margin: 0;}
+ .frmLine { margin: 0; } 
  .frmLine div { width: 100%; justify-content: space-between; } 
- .schFrm { width: 70%; margin-right: 0; padding: 5px 6px; border-radius: 8px;} 
+ .schFrm { width: 70%; margin-right: 0; padding: 5px 6px; border-radius: 8px; } 
  .schFrm input { width: 80%; font-size: 13px; } 
  .schFrm button { width: 22px; height: 22px; } 
- .sortBtn { padding: 5px 8px; font-size: 12px; color: #000; }
-
+ .sortBtn + label { margin-right: 0; font-size: 12px; color: #000; } 
+ 
  .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
  .goDetail { width: 100%; } 
  .schOne { width: 100%; height: 100%; position: relative; margin-bottom: 20px; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
  
  .schTopInfo { width: 82%; height: 44px; padding: 5px 15px; border-radius: 13px; font-size: 12px; } 
- .schTopInfo .subTxt { font-size: 13px; }  
+ .schTopInfo .subTxt { font-size: 13px; } 
  .schOne .post { width: 100%; height: 170px; } 
  .schOne .schMap { width: 100%; height: 200px; } 
- .locList ul { font-size: 13px; }
- .locList ul li { padding: 12px 0 12px 18px; }
- .locList ul li::before { top: 9px; width: 18px; height: 18px; }
+ .locList ul { font-size: 13px; } 
+ .locList ul li { padding: 12px 0 12px 18px; } 
+ .locList ul li::before { top: 9px; width: 18px; height: 18px; } 
  
- .pagination { display: none; }
+ .pagination { display: none; } 
 
- .schBottom { height: 50px; font-size: 14px; }
- .dayAll { height: 100%;}
- .dayAll span.day { padding: 6px 11px; margin: 0 5px 5px 0; font-size: 12px; }
+ .schBottom { height: 50px; font-size: 14px; } 
+ .dayAll { height: 100%; } 
+ .dayAll span.day { padding: 6px 11px; margin: 0 5px 5px 0; font-size: 12px; } 
  
  .postBtn { padding: 0; background: var(--color-main); font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 45px; height: 45px; bottom: 30px; right: 25px; border-radius: 50%; text-align: center; position: fixed; z-index: 100; cursor: pointer; } 
  .postBtn:hover { transition: 0.5s ease; background-color: #efefef; } 
