--- a/css/message.css
+++ b/css/message.css
@@ -187,7 +187,7 @@ section { min-height: calc(100vh - 240px); margin-top: 150px; margin-bottom: 120
     .chatWrap { height: auto; }
     .chatInner { width: 100%; height: 540px; padding-bottom: 25px; margin-right: 5px; }
     .chatInner .ment { padding: 10px 0 0 0; font-size: 12px; }
-    .chatInner .ment .mentp { padding: 2px 0; font-size: 11px; font-family: pLight; }
+    .chatInner .ment .mentp { padding: 0; color: #fff; background: #a3a3a3; font-size: 10px; font-family: pLight; }
 
     .ansarea { margin-top: 15px; padding: 10px 15px;}
     .ansarea .ansprof img { width: 38px; }
