--- a/css/mypage.css
+++ b/css/mypage.css
@@ -392,7 +392,8 @@ to { opacity: 1; transform: none; }
 
  .schOne { width: 100%; height: 100%; margin: 10px auto; border-radius: 12px; box-shadow: 1px 1px 7px #8585856b; } 
  .schTopInfo { top: 7%; left: 0; padding: 0 15px; font-size: 12px; } 
- .schTopInfo .schNicK { font-size: 15px; } 
+ .schTopInfo .schUser img { width: 35px; }
+ .schTopInfo .schNicK { font-size: 15px; font-family: pSemi; } 
  .schUser div span:last-child { font-size: 13px; } 
  .schDays p:first-child { font-family: pLight; } 
  .schDays p:first-child, .schTopInfo .subTxt { font-size: 12px; } 
@@ -405,7 +406,7 @@ to { opacity: 1; transform: none; }
  .goDetail .postBottom { width: 85%; height: 100%; padding: 15px 0 15px 20px; margin: 0;} 
  .goDetail .postBottom h3 { width: 98%; font-size: 14px; } 
 
- .hiddenBox { height: auto; bottom: 10px; padding: 0 15px; color: #fff; background: transparent; font-size: 12px; font-family: pLight; opacity: 1; z-index: 10; } 
+ .hiddenBox { width: 90%; height: auto; bottom: 10px; margin: 0 15px; padding: 10px 0 0 0; color: #fff; background: transparent; border-top: 1px solid #ffffffa6; font-size: 12px; font-family: pLight; opacity: 1; z-index: 10; } 
  .schOne:hover .hiddenBox { opacity: 1; animation: none; z-index: 10; } 
  .hiddenBox .viewCnt::before { top: -2px; left: -25px; } 
  .hiddenBox .chatCnt::before { top: -2px; left: -25px; } 
