--- a/css/sList.css
+++ b/css/sList.css
@@ -49,8 +49,8 @@ section { min-height: calc(100vh - 240px); margin-top: 170px; margin-bottom: 120
  .strFrm button { width: 22px; height: 22px; } 
  .sortBtn + label { font-size: 12px; color: #000; }
 
- .itemAll { margin: 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
- .itemOne { width: 100%; height: 100%; margin: 15px 0; } 
+ .itemAll { margin: 10px 0 0 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
+ .itemOne { width: 98%; height: 100%; margin: 15px auto; } 
  .itemOne .post { height: 160px; } 
  
  .postImg { width: 100%; } 
