--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -86,8 +86,8 @@ footer p { margin-top: 10px; color: #222; }
 .menuTrigger.active span:nth-child(3) { opacity: 0; transform: rotate(0deg) scale(0.2, 0.2); } 
 .menuTrigger.active span:last-child { transform: rotate(-45deg) translate(0, -1px); } 
 
-.gnb .gnbInner { position: absolute; top: -50px; right: -100%; width: 0; height: 100vh; flex-direction: column; justify-content: flex-start; align-items: center; padding: 50px; -webkit-font-smoothing: antialiased; background: #fff; transform-origin: 0% 0%; transform: translate(-100%, 0); transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); box-shadow: 0 6px 15px #0e0e0e59; } 
- .gnb .gnbInner.active { width: 55vw; right: -150%; } 
+.gnb .gnbInner { position: absolute; top: -50px; right: -100%; width: 0; height: 100vh; flex-direction: column; justify-content: space-between; align-items: center; padding: 50px; -webkit-font-smoothing: antialiased; background: #fff; transform-origin: 0% 0%; transform: translate(-100%, 0); transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); box-shadow: 0 6px 15px #0e0e0e59; z-index: 200;} 
+ .gnb .gnbInner.active { width: 55vw; right: -140%; } 
 
  .gnb .gnbTab { flex-direction: column; margin-top: 70px; width: 100%; } 
  .gnb .gnbTab li { margin-top: 20px; width: 100%; padding-bottom: 20px; border-bottom: 1px solid #ddd; font-size: 16px; font-family: pBold; text-align: center; } 
@@ -95,6 +95,12 @@ footer p { margin-top: 10px; color: #222; }
  .gnb .gnbTab li a { width: 100%; color: #333; } 
  .gnb .userHead { display: none; } 
  .menuTrigger { display: block; position: absolute; background: none; } 
+
+ .gnbTapBottom { padding-bottom: 75px; width: 100%; }
+ .gnbTapBottom li { width: 100%; font-size: 13px; }
+ .gnbTapBottom li:last-child { position: relative; padding-left: 25px; margin-top: 18px; }
+ .gnbTapBottom li:last-child::before { content: ''; position: absolute; top: 0; left: 0; width: 16px; height: 14px; background: url(../source/logoutIco.png) center center; background-size: cover; opacity: 0.7;}
+ .gnbTapBottom li a { color: #666; }
 
  .gnbTab li a.active { color: var(--color-main); border: none; } 
 
