--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -77,7 +77,7 @@ footer p { margin-top: 10px; color: #222; }
  header .headLogo { width: 110px; margin: 5px 0 0 -10px; } 
  header nav { display: flex; align-items: center; justify-content: center; padding:  5px 5.5%; } 
 
- .menuTrigger { display: block; position: relative; top: -8px; right: -10px; user-select: none;} 
+ .menuTrigger { display: block; position: relative; top: -8px; right: -10px; user-select: none; } 
  .menuTrigger span { display: block; width: 24px; height: 2px; margin-bottom: 4px; position: relative; background: #a5a5a5; border-radius: 3px; transform-origin: 4px 0px; transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0), background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), opacity 0.55s ease; } 
 .menuTrigger span:nth-child(3) { transform-origin: 0% 0%; } 
 .menuTrigger span:last-child { transform-origin: 0% 100%; } 
@@ -86,7 +86,7 @@ footer p { margin-top: 10px; color: #222; }
 .menuTrigger.active span:nth-child(3) { opacity: 0; transform: rotate(0deg) scale(0.2, 0.2); } 
 .menuTrigger.active span:last-child { transform: rotate(-45deg) translate(0, -1px); } 
 
-.gnb .gnbInner { position: absolute; top: -50px; right: -100%; width: 0; height: 100vh; flex-direction: column; justify-content: space-between; align-items: center; padding: 50px; -webkit-font-smoothing: antialiased; background: #fff; transform-origin: 0% 0%; transform: translate(-100%, 0); transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); box-shadow: 0 6px 15px #0e0e0e59; z-index: 200;} 
+.gnb .gnbInner { position: absolute; top: -50px; right: -100%; width: 0; height: 100vh; flex-direction: column; justify-content: space-between; align-items: center; padding: 50px; -webkit-font-smoothing: antialiased; background: #fff; transform-origin: 0% 0%; transform: translate(-100%, 0); transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); box-shadow: 0 6px 15px #0e0e0e59; } 
  .gnb .gnbInner.active { width: 55vw; right: -140%; } 
 
  .gnb .gnbTab { flex-direction: column; margin-top: 70px; width: 100%; } 
