--- a/css/sPay.css
+++ b/css/sPay.css
@@ -81,6 +81,7 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance: none; marg
 .infoTop { display: flex; align-items: center; justify-content: space-between;}
 .infoTop span { display: flex; align-items: center;}
 
+/* .langAll { margin-top: 10px; display: flex; align-items: center;} */
 .lBtn { display: none; }
 .lBtn + label { position: relative; width: calc(100vw * 40 / 1920); height: calc(100vw * 40 / 1920); cursor: pointer; transition: all .2s; }
 label[for='langKor'] { margin-right: 10px; background: url(../source/korBtn.png) center center; background-size: cover; }
