--- a/css/cWriteSch.css
+++ b/css/cWriteSch.css
@@ -178,24 +178,24 @@ input[name="ds"]:checked + label .check::after { content: '✓'; color: #fff; ba
  
 /* -------------------- modal ---------------------- */
 .modalBg { display: flex; align-items: center; justify-content: center;}
-.locModal { margin: 0; padding: 30px 20px 20px 20px; width: 70vw; height: 400px; box-shadow: 2px 2px 7px #1818189c; } 
-.locModal h4 { font-size: 15px; font-family: pSemi; } 
+.locModal { margin: 0; padding: 30px 20px 20px 20px; width: 70vw; height: 370px; box-shadow: 2px 2px 7px #1818189c; } 
+.locModal h4 { font-size: 15px; font-family: pBold; } 
 
-.schBox { margin: 30px 0 10px 0; border-radius: 8px; } 
+.schBox { margin: 30px 0 10px 0; height: 35px; border-radius: 8px; } 
 .schBox .addLocTxt { width: 90%; height: 40px; padding: 0 20px; font-size: 13px; } 
 .schBox .locSchBtn { margin-right: 17px; width: 25px; height: 25px; } 
 
-.locAll { margin: 10px 0; height: 280px; } 
+.locAll { margin: 10px 0; height: 230px; } 
 .locAll::-webkit-scrollbar { width: 10px; } 
 
-input[name="ds"] + label { width: 100%; margin: 10px 0; padding-bottom: 10px; } 
-input[name="ds"] + label::before { width: 22px; height: 22px; top: 2px; left: 8px; } 
-input[name="ds"] + label span { width: 78%; margin-left: 25px; font-size: 15px; } 
-input[name="ds"] + label .check { width: 22px; height: 22px; border-radius: 5px; } 
+input[name="ds"] + label { width: 100%; margin: 12px 0; padding-bottom: 12px; } 
+input[name="ds"] + label::before { width: 18px; height: 18px; top: 2px; left: 8px; } 
+input[name="ds"] + label span { width: 78%; margin-left: 25px; font-size: 13px; } 
+input[name="ds"] + label .check { width: 15px; height: 15px; border-radius: 2px; border-width: 1px; } 
 
-input[name="ds"]:checked + label .check::after { border-radius: 5px; font-size: 22px; width: 25px; height: 25px; } 
+input[name="ds"]:checked + label .check::after { border-radius: 2px; font-size: 14px; width: 16px; height: 16px; } 
 
-.locModal .addBtn { padding: 6px 11px; border-radius: 6px; font-size: 14px; background: #ffd4389f; } 
+.locModal .addBtn { padding: 6px 11px; border-radius: 5px; font-size: 13px; background: #ffd4389f; } 
 
 
 
