--- a/css/mypage.css
+++ b/css/mypage.css
@@ -307,7 +307,7 @@ to { opacity: 1; transform: none; }
  .gionement p:last-child { font-size: 12px; } 
  
  .mannerLevel { flex-wrap: wrap; margin: 35px 0; } 
- .mannerLevel .mlb { height: 98px; width: 17%; margin-bottom: 7px; } 
+ .mannerLevel .mlb { height: 92px; width: 16.5%; margin-bottom: 7px; border: 1px solid #eede82c9; border-radius: 7px;} 
  .lvimg p { color: #000000c0; font-family: pRegular; font-size: 11px; } 
  .lvhow img { width: 15px; } 
  .mlbInner { display: flex; justify-content: space-between; flex-direction: column; height: 80%; margin: 5px 0; font-size: 12px; } 
