--- a/css/cSchedule.css
+++ b/css/cSchedule.css
@@ -97,7 +97,7 @@ section { min-height: calc(100vh - 240px); padding: 0 9%; margin-top: 200px; }
  .dayAll span.day { padding: 6px 11px; margin: 0 5px 5px 0; font-size: 12px; } 
  
  .postBtn { padding: 0; background: var(--color-main); font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 45px; height: 45px; bottom: 30px; right: 25px; border-radius: 50%; text-align: center; position: fixed; z-index: 100; cursor: pointer; } 
- .postBtn:hover { transition: 0.5s ease; background-color: #efefef; } 
+ .postBtn:hover { transition: 0.5s ease; background-color: var(--color-main); } 
  .postBtn::before { content: ""; background: url(../source/writeIco.png) center center no-repeat; position: absolute; width: 23px; height: 23px; top: 9px; left: 10px; background-size: cover; } 
 
  #scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 45px; height: 45px; bottom: 83px; right: 25px; border-radius: 50%; text-align: center; font-size: 12px; position: fixed; z-index: 100; cursor: pointer; z-index: 50; } 
